--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p class="text-xl text-white text-center">Your Journey Starts Here: Fast, Convenient, and Reliable Bus
                     Ticket
                     Service.Seamless Travel Planning: Book Your Bus Tickets with Ease and Comfort</p>
-                <button class="btn btn-success bg-[#1DD100] font-bold">Buy Tickets</button>
+                <button onclick="scrollToBuyTickets()" class="btn btn-success bg-[#1DD100] font-bold">Buy Tickets</button>
 
                 <div class="flex flex-row  gap-28  absolute -bottom-24">
                     <div class="flex bg-white p-5 rounded-lg border-b-4 border-b-[#1DD100] ">
@@ -129,7 +129,7 @@
             <button class="btn text-xl btn-outline btn-success">See all offers</button>
         </section>
 
-        <section class="  mt-10 border-t-2 border-t-[#1DD100]  rounded-t-[80px] ">
+        <section id="buy-Tickets" class="  mt-10 border-t-2 border-t-[#1DD100]  rounded-t-[80px] ">
             <!-- Route -->
             <div class="flex flex-col mt-6 gap-5 justify-center items-center">
                 <h1 class="text-3xl font-bold">P.H Paribahan</h1>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <a class="btn bg-[#1DD1001A] text-[#1DD10066] font-bold "><img src="images/seat-green.png"
-                                alt=""><span>0</span>Seats Left </a>
+                                alt=""><span id="seat-left">40</span>Seats Left </a>
 
                     </div>
 
@@ -205,80 +205,80 @@
                             <p>Availabe</p>
                         </div>
                         <div class="flex gap-2 "> <img src="images/seat-green-filled.png" alt="">
-                            <p>Selected</p>
+                            <p class="text-green-600">Selected</p>
                         </div>
                     </div>
                     <hr class="border-t border-dashed border-black mb-2 mt-2">
 
                     <div class=" flex  flex-col p-10 gap-6 ">
                         <div class=" flex gap-11">
-                            A <kbd class="kbd kbd-lg w-20">A1 </kbd>
-                            <kbd class="kbd kbd-lg w-20">A2</kbd>
-                            <kbd class="kbd kbd-lg w-20">A3</kbd>
-                            <kbd class="kbd kbd-lg w-20">A4</kbd>
+                            A <kbd id="A1" class="kbd kbd-lg w-20">A1 </kbd>
+                            <kbd id="A2" class="kbd kbd-lg w-20">A2</kbd>
+                            <kbd id="A3" class="kbd kbd-lg w-20">A3</kbd>
+                            <kbd id="A4"  class="kbd kbd-lg w-20">A4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            B <kbd class="kbd kbd-lg w-20">B1</kbd>
-                            <kbd class="kbd kbd-lg w-20">B2</kbd>
-                            <kbd class="kbd kbd-lg w-20">B3</kbd>
-                            <kbd class="kbd kbd-lg w-20">B4</kbd>
+                            B <kbd id="B1"class="kbd kbd-lg w-20">B1</kbd>
+                            <kbd  id="B2"class="kbd kbd-lg w-20">B2</kbd>
+                            <kbd id="B3"class="kbd kbd-lg w-20">B3</kbd>
+                            <kbd id="B4"class="kbd kbd-lg w-20">B4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            C <kbd class="kbd kbd-lg w-20">C1</kbd>
-                            <kbd class="kbd kbd-lg w-20">C2</kbd>
-                            <kbd class="kbd kbd-lg w-20">C3</kbd>
-                            <kbd class="kbd kbd-lg w-20">C4</kbd>
+                            C <kbd id="C1" class="kbd kbd-lg w-20">C1</kbd>
+                            <kbd id="C2" class="kbd kbd-lg w-20">C2</kbd>
+                            <kbd id="C3"class="kbd kbd-lg w-20">C3</kbd>
+                            <kbd id="C4" class="kbd kbd-lg w-20">C4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            D <kbd class="kbd kbd-lg w-20">D1</kbd>
-                            <kbd class="kbd kbd-lg w-20">D2</kbd>
-                            <kbd class="kbd kbd-lg w-20">D3</kbd>
-                            <kbd class="kbd kbd-lg w-20">D4</kbd>
+                            D <kbd id="D1"class="kbd kbd-lg w-20">D1</kbd>
+                            <kbd id="D2"class="kbd kbd-lg w-20">D2</kbd>
+                            <kbd id="D3"class="kbd kbd-lg w-20">D3</kbd>
+                            <kbd id="D4" class="kbd kbd-lg w-20">D4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            E <kbd class="kbd kbd-lg w-20">E1</kbd>
-                            <kbd class="kbd kbd-lg w-20">E2</kbd>
-                            <kbd class="kbd kbd-lg w-20">E3</kbd>
-                            <kbd class="kbd kbd-lg w-20">E4</kbd>
+                            E <kbd id="E1"class="kbd kbd-lg w-20">E1</kbd>
+                            <kbd id="E2"class="kbd kbd-lg w-20">E2</kbd>
+                            <kbd id="E3"class="kbd kbd-lg w-20">E3</kbd>
+                            <kbd id="E4" class="kbd kbd-lg w-20">E4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            F <kbd class="kbd kbd-lg w-20">F1</kbd>
-                            <kbd class="kbd kbd-lg w-20">F2</kbd>
-                            <kbd class="kbd kbd-lg w-20">F3</kbd>
-                            <kbd class="kbd kbd-lg w-20">F4</kbd>
+                            F <kbd id="F1" class="kbd kbd-lg w-20">F1</kbd>
+                            <kbd id="F2" class="kbd kbd-lg w-20">F2</kbd>
+                            <kbd id="F3"class="kbd kbd-lg w-20">F3</kbd>
+                            <kbd id="F4"class="kbd kbd-lg w-20">F4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            G <kbd class="kbd kbd-lg w-20">G1</kbd>
-                            <kbd class="kbd kbd-lg w-20">G2</kbd>
-                            <kbd class="kbd kbd-lg w-20">G3</kbd>
-                            <kbd class="kbd kbd-lg w-20">G4</kbd>
+                            G <kbd id="G1" class="kbd kbd-lg w-20">G1</kbd>
+                            <kbd id="G2"class="kbd kbd-lg w-20">G2</kbd>
+                            <kbd id="G3"class="kbd kbd-lg w-20">G3</kbd>
+                            <kbd id="G4" class="kbd kbd-lg w-20">G4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            H <kbd class="kbd kbd-lg w-20">H1</kbd>
-                            <kbd class="kbd kbd-lg w-20">H2</kbd>
-                            <kbd class="kbd kbd-lg w-20">H3</kbd>
-                            <kbd class="kbd kbd-lg w-20">H4</kbd>
+                            H <kbd id="H1" class="kbd kbd-lg w-20">H1</kbd>
+                            <kbd id="H2"class="kbd kbd-lg w-20">H2</kbd>
+                            <kbd id="H3"class="kbd kbd-lg w-20">H3</kbd>
+                            <kbd id="H4"class="kbd kbd-lg w-20">H4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            I <kbd class="kbd kbd-lg w-20">I1</kbd>
-                            <kbd class="kbd kbd-lg w-20">I2</kbd>
-                            <kbd class="kbd kbd-lg w-20">I3</kbd>
-                            <kbd class="kbd kbd-lg w-20">I4</kbd>
+                            I <kbd id="I1" class="kbd kbd-lg w-20">I1</kbd>
+                            <kbd id="I2" class="kbd kbd-lg w-20">I2</kbd>
+                            <kbd id="I3"class="kbd kbd-lg w-20">I3</kbd>
+                            <kbd id="I4"class="kbd kbd-lg w-20">I4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            J <kbd class="kbd kbd-lg w-20">J1</kbd>
-                            <kbd class="kbd kbd-lg w-20">J2</kbd>
-                            <kbd class="kbd kbd-lg w-20">J3</kbd>
-                            <kbd class="kbd kbd-lg w-20">J4</kbd>
+                            J <kbd id="J1" class="kbd kbd-lg w-20">J1</kbd>
+                            <kbd id="J2"class="kbd kbd-lg w-20">J2</kbd>
+                            <kbd id="J3"class="kbd kbd-lg w-20">J3</kbd>
+                            <kbd id="J4"class="kbd kbd-lg w-20">J4</kbd>
 
                         </div>
                     </div>
@@ -294,38 +294,30 @@
                         <!-- Table -->
                         <div class="col-span-3 ">
                             <div class="flex mb-4 gap-10">
-                                <div class="w-1/3 font-bold">Seat</div>
+                                <div class="w-1/3 font-bold">Seat <button id="total-seat" class="bg-green-500 p-1 rounded-full  text-white">0</button></div>
                                 <div class="w-1/3 font-bold">Class</div>
                                 <div class="w-1/3 font-bold">Price</div>
                             </div>
                             <hr class="col-span-3 my-4 border-t border-black">
 
-                            <div class="flex mb-4  gap-10">
-                                <div class="w-1/3">C2</div>
-                                <div class="w-1/3">Economy</div>
-                                <div class="w-1/3">550</div>
-                            </div>
-                            <div class="flex gap-10">
-                                <div class="w-1/3">C1</div>
-                                <div class="w-1/3">Economy</div>
-                                <div class="w-1/3">550</div>
-                            </div>
+                            <div id="selected-seat-info"></div>
+
                         </div>
                         <!-- Horizontal Line -->
                         <hr class="col-span-3 my-4 border-t border-black">
                         <!-- Additional Fields -->
                         <div class="  flex gap-36 col-span-3 justify-between ">
                             <p>Total Price</p>
-                            <p>BDT <span>1100</span></p>
+                            <p>BDT <span id="total-price">00</span></p>
                         </div>
                         <div class="flex mt-5">
-                            <input type="text" class="border px-4 py-2 rounded-l flex-grow"
+                            <input type="text" id="coupon-input" class="border px-4 py-2 rounded-l flex-grow"
                                 placeholder="Have any cupon">
-                            <button class="bg-green-500 text-white px-4 py-2 rounded-r ">Apply</button>
+                            <button id="apply-coupon-button" class="bg-green-500 text-white px-4 py-2 rounded-r ">Apply</button>
                         </div>
                         <div class="  flex gap-36 col-span-3 justify-between mt-2 ">
                             <p>Grand Total</p>
-                            <p>BDT <span>1100</span></p>
+                            <p>BDT <span id="grand-total-price"></span></span></p>
                         </div>
                     </div>
 
@@ -335,21 +327,22 @@
                         <div class="mb-4">
                             <label for="passengerName" class="block text-sm font-medium text-gray-700">Passenger
                                 Name</label>
-                            <input type="text" id="passengerName" name="passengerName"
+                            <input type="text" id="passengerName" name="passengerName" placeholder="Enter Your Name"
                                 class="border px-4 py-2 rounded-md w-full">
                         </div>
                         <div class="mb-4">
                             <label for="phoneNumber" class="block text-sm font-medium text-gray-700">Phone
                                 Number</label>
-                            <input type="tel" id="phoneNumber" name="phoneNumber"
+                            <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter Your Phone Number"
                                 class="border px-4 py-2 rounded-md w-full">
                         </div>
                         <div class="mb-4">
                             <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" id="email" name="email" class="border px-4 py-2 rounded-md w-full">
+                            <input type="email" id="email" name="email" placeholder="Enter Your Email address" class="border px-4 py-2 rounded-md w-full">
                         </div>
-                        <button type="submit"
+                        <button type="submit" id="submit-button"
                             class="bg-green-500 text-white px-4 py-2 rounded-md w-full">Submit</button>
+                            
                     </form>
                 </div>
 
@@ -388,6 +381,8 @@
 
 
     <script src="js/script.js"></script>
+    <script src="js/utility.js"></script>
+
 </body>
 
 </html>
