--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
             </div>
         </nav>
         <!-- banner section -->
-        <div class="min-h-screen bg-[url(images/banner.png)] bg-no-repeat bg-center ">
+        <div class="min-h-screen bg-[url(images/banner.png)] bg-no-repeat bg-center bg-cover relative ">
             <div class="flex flex-col justify-center items-center p-20 gap-5 ">
                 <h1 class="text-6xl font-extrabold text-white ">End-to-End Travel With</h1>
                 <h1 class="text-6xl font-extrabold text-[#1DD100]"> P Paribahan</h1>
                 <p class="text-xl text-white text-center">Your Journey Starts Here: Fast, Convenient, and Reliable Bus
                     Ticket
                     Service.Seamless Travel Planning: Book Your Bus Tickets with Ease and Comfort</p>
-                <button onclick="scrollToBuyTickets()" class="btn btn-success bg-[#1DD100] font-bold">Buy Tickets</button>
-
-                <div class="flex flex-row  gap-28  absolute -bottom-24">
+                <button onclick="scrollToBuyTickets()" class="btn btn-success bg-[#1DD100] font-bold">Buy
+                    Tickets</button>
+<!-- navbar Items -->
+                <div class="flex flex-col    lg:flex-row gap-28   absolute lg:-bottom-16 ">
                     <div class="flex bg-white p-5 rounded-lg border-b-4 border-b-[#1DD100] ">
                         <img class="mr-5" src="images/people.png" alt="">
                         <div>
@@ -91,6 +92,7 @@
     </header>
 
     <main>
+        <!-- cupon section -->
         <section class="mt-20  flex flex-col justify-center items-center  gap-6">
             <div>
                 <h1 class="text-3xl font-extrabold text-center">Best Offer for you</h1>
@@ -128,15 +130,15 @@
             </div>
             <button class="btn text-xl btn-outline btn-success">See all offers</button>
         </section>
+            <!-- Route -->
 
         <section id="buy-Tickets" class="  mt-10 border-t-2 border-t-[#1DD100]  rounded-t-[80px] ">
-            <!-- Route -->
             <div class="flex flex-col mt-6 gap-5 justify-center items-center">
                 <h1 class="text-3xl font-bold">P.H Paribahan</h1>
                 <p class="text-center">Your Trusted Travel Companion. Discover a seamless journey with our reliable bus
                     services. <br> Convenient, Comfortable, and Always on Time!</p>
             </div>
-
+<!-- select Route -->
             <div class="flex flex-row p-24 max-h-96 card bg-base-300 rounded-box place-items-center  bg-gray-50 mt-10">
                 <div>
                     <div class="flex  flex-row justify-between  ">
@@ -215,70 +217,70 @@
                             A <kbd id="A1" class="kbd kbd-lg w-20">A1 </kbd>
                             <kbd id="A2" class="kbd kbd-lg w-20">A2</kbd>
                             <kbd id="A3" class="kbd kbd-lg w-20">A3</kbd>
-                            <kbd id="A4"  class="kbd kbd-lg w-20">A4</kbd>
+                            <kbd id="A4" class="kbd kbd-lg w-20">A4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            B <kbd id="B1"class="kbd kbd-lg w-20">B1</kbd>
-                            <kbd  id="B2"class="kbd kbd-lg w-20">B2</kbd>
-                            <kbd id="B3"class="kbd kbd-lg w-20">B3</kbd>
-                            <kbd id="B4"class="kbd kbd-lg w-20">B4</kbd>
+                            B <kbd id="B1" class="kbd kbd-lg w-20">B1</kbd>
+                            <kbd id="B2" class="kbd kbd-lg w-20">B2</kbd>
+                            <kbd id="B3" class="kbd kbd-lg w-20">B3</kbd>
+                            <kbd id="B4" class="kbd kbd-lg w-20">B4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             C <kbd id="C1" class="kbd kbd-lg w-20">C1</kbd>
                             <kbd id="C2" class="kbd kbd-lg w-20">C2</kbd>
-                            <kbd id="C3"class="kbd kbd-lg w-20">C3</kbd>
+                            <kbd id="C3" class="kbd kbd-lg w-20">C3</kbd>
                             <kbd id="C4" class="kbd kbd-lg w-20">C4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            D <kbd id="D1"class="kbd kbd-lg w-20">D1</kbd>
-                            <kbd id="D2"class="kbd kbd-lg w-20">D2</kbd>
-                            <kbd id="D3"class="kbd kbd-lg w-20">D3</kbd>
+                            D <kbd id="D1" class="kbd kbd-lg w-20">D1</kbd>
+                            <kbd id="D2" class="kbd kbd-lg w-20">D2</kbd>
+                            <kbd id="D3" class="kbd kbd-lg w-20">D3</kbd>
                             <kbd id="D4" class="kbd kbd-lg w-20">D4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
-                            E <kbd id="E1"class="kbd kbd-lg w-20">E1</kbd>
-                            <kbd id="E2"class="kbd kbd-lg w-20">E2</kbd>
-                            <kbd id="E3"class="kbd kbd-lg w-20">E3</kbd>
+                            E <kbd id="E1" class="kbd kbd-lg w-20">E1</kbd>
+                            <kbd id="E2" class="kbd kbd-lg w-20">E2</kbd>
+                            <kbd id="E3" class="kbd kbd-lg w-20">E3</kbd>
                             <kbd id="E4" class="kbd kbd-lg w-20">E4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             F <kbd id="F1" class="kbd kbd-lg w-20">F1</kbd>
                             <kbd id="F2" class="kbd kbd-lg w-20">F2</kbd>
-                            <kbd id="F3"class="kbd kbd-lg w-20">F3</kbd>
-                            <kbd id="F4"class="kbd kbd-lg w-20">F4</kbd>
+                            <kbd id="F3" class="kbd kbd-lg w-20">F3</kbd>
+                            <kbd id="F4" class="kbd kbd-lg w-20">F4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             G <kbd id="G1" class="kbd kbd-lg w-20">G1</kbd>
-                            <kbd id="G2"class="kbd kbd-lg w-20">G2</kbd>
-                            <kbd id="G3"class="kbd kbd-lg w-20">G3</kbd>
+                            <kbd id="G2" class="kbd kbd-lg w-20">G2</kbd>
+                            <kbd id="G3" class="kbd kbd-lg w-20">G3</kbd>
                             <kbd id="G4" class="kbd kbd-lg w-20">G4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             H <kbd id="H1" class="kbd kbd-lg w-20">H1</kbd>
-                            <kbd id="H2"class="kbd kbd-lg w-20">H2</kbd>
-                            <kbd id="H3"class="kbd kbd-lg w-20">H3</kbd>
-                            <kbd id="H4"class="kbd kbd-lg w-20">H4</kbd>
+                            <kbd id="H2" class="kbd kbd-lg w-20">H2</kbd>
+                            <kbd id="H3" class="kbd kbd-lg w-20">H3</kbd>
+                            <kbd id="H4" class="kbd kbd-lg w-20">H4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             I <kbd id="I1" class="kbd kbd-lg w-20">I1</kbd>
                             <kbd id="I2" class="kbd kbd-lg w-20">I2</kbd>
-                            <kbd id="I3"class="kbd kbd-lg w-20">I3</kbd>
-                            <kbd id="I4"class="kbd kbd-lg w-20">I4</kbd>
+                            <kbd id="I3" class="kbd kbd-lg w-20">I3</kbd>
+                            <kbd id="I4" class="kbd kbd-lg w-20">I4</kbd>
 
                         </div>
                         <div class=" flex gap-11">
                             J <kbd id="J1" class="kbd kbd-lg w-20">J1</kbd>
-                            <kbd id="J2"class="kbd kbd-lg w-20">J2</kbd>
-                            <kbd id="J3"class="kbd kbd-lg w-20">J3</kbd>
-                            <kbd id="J4"class="kbd kbd-lg w-20">J4</kbd>
+                            <kbd id="J2" class="kbd kbd-lg w-20">J2</kbd>
+                            <kbd id="J3" class="kbd kbd-lg w-20">J3</kbd>
+                            <kbd id="J4" class="kbd kbd-lg w-20">J4</kbd>
 
                         </div>
                     </div>
@@ -294,7 +296,8 @@
                         <!-- Table -->
                         <div class="col-span-3 ">
                             <div class="flex mb-4 gap-10">
-                                <div class="w-1/3 font-bold">Seat <button id="total-seat" class="bg-green-500 p-1 rounded-full  text-white">0</button></div>
+                                <div class="w-1/3 font-bold">Seat <button id="total-seat"
+                                        class="bg-green-500 p-1 rounded-full  text-white">0</button></div>
                                 <div class="w-1/3 font-bold">Class</div>
                                 <div class="w-1/3 font-bold">Price</div>
                             </div>
@@ -307,17 +310,18 @@
                         <hr class="col-span-3 my-4 border-t border-black">
                         <!-- Additional Fields -->
                         <div class="  flex gap-36 col-span-3 justify-between ">
-                            <p>Total Price</p>
-                            <p>BDT <span id="total-price">00</span></p>
+                            <p  class="font-bold">Total Price</p>
+                            <p  class="font-bold">BDT <span id="total-price">00</span></p>
                         </div>
                         <div class="flex mt-5">
                             <input type="text" id="coupon-input" class="border px-4 py-2 rounded-l flex-grow"
                                 placeholder="Have any cupon">
-                            <button id="apply-coupon-button" class="bg-green-500 text-white px-4 py-2 rounded-r ">Apply</button>
+                            <button id="apply-coupon-button"
+                                class="bg-green-500 text-white px-4 py-2 rounded-r " >Apply</button>
                         </div>
                         <div class="  flex gap-36 col-span-3 justify-between mt-2 ">
-                            <p>Grand Total</p>
-                            <p>BDT <span id="grand-total-price"></span></span></p>
+                            <p class="font-bold">Grand Total</p>
+                            <p  class="font-bold">BDT <span id="grand-total-price">00</span></p>
                         </div>
                     </div>
 
@@ -338,11 +342,12 @@
                         </div>
                         <div class="mb-4">
                             <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" id="email" name="email" placeholder="Enter Your Email address" class="border px-4 py-2 rounded-md w-full">
+                            <input type="email" id="email" name="email" placeholder="Enter Your Email address"
+                                class="border px-4 py-2 rounded-md w-full">
                         </div>
                         <button type="submit" id="submit-button"
-                            class="bg-green-500 text-white px-4 py-2 rounded-md w-full">Submit</button>
-                            
+                            class="bg-green-500 text-white px-4 py-2 rounded-md w-full" >Submit</button>
+
                     </form>
                 </div>
 
@@ -353,27 +358,39 @@
 
         </section>
     </main>
-    <footer class="bg-gray-800 text-white p-4 h-full">
-        <div class="container mx-auto">
+
+    <!-- footer section -->
+    <footer class="bg-black text-white p-4 h-full ">
+        <div class="container mx-auto mt-20">
             <div class="flex flex-col justify-between items-center">
-                <div class="flex flex-row justify-between gap-48">
+                <div class="flex flex-row justify-between gap-96">
                     <div>
-                    <h1 class="text-3xl font-bold">P-Ticket</h1>
-                    <p> P-Ticket is a digital platform to make your daily journey better </p>
-                </div>
+                        <h1 class="text-3xl font-bold">P-Ticket</h1>
+                        <p> P-Ticket is a digital platform to make your daily journey better </p>
+                    </div>
                     <div>
-                        <p>Download Our app</p>
-                        <div class="flex  border-white border-2 p-2 rounded-lg">
-                            <img src="images/playstore.png" alt="">
-                            <div class=" flex flex-col">
-                                <p>Get it on</p>
-                                <h1>Google play</h1>
+                        <p class="text-end">Download Our app</p>
+                        <div class="flex  border-white border-2 p-2 rounded-lg mt-2">
+                            <img class="mr-1" src="images/playstore.png" alt="">
+                            <div class=" flex flex-col ">
+                                <p class="text-xs">GET IT ON</p>
+                                <h1 class="font-bold">Google play</h1>
                             </div>
                         </div>
                     </div>
                 </div>
-                <hr class="col-span-3 my-4 border-t border-white">
-
+                <hr class="border-dashed border-white w-full mt-4">
+                <div class="flex flex-row justify-between items-center mt-4 gap-48 mb-20">
+                    <div>
+                        <p class="text-gray-500">@ All Rights Reserved, P-Ticket Services Limited. 2024</p>
+                    </div>
+                    <div class="flex flex-row justify-between gap-2 ">
+                        <p class="text-gray-500">Terms & Conditions
+                        <p>
+                        <p class="text-gray-500">Return & refund policy</p>
+                        <p class="text-gray-500 ">Privacy policy</p>
+                    </div>
+                </div>
             </div>
 
         </div>
